# mktanalyst

./: .gitignore  pyproject.toml
etl/: config.yaml  db.db
etl/models/: extract_splits_and_bonus.sql  grow_holdings_standard.sql  groww_holdings.py  groww_tb_standard.sql  groww_tradebook.sql  holdings_unified.sql  incremental_model.sql  splits_base.sql  tradebook_unified.sql  zerodh_holdings_standard.sql  zerodha_holdings.py  zerodha_tb_standard.sql  zerodha_tradebook.sql
etl/seeds/: bonus_and_splits.csv  icicidirect_scrips_to_nse_convertor.csv
src/mktanalyst/data/: splits.json
src/mktanalyst/splits_and_bonuses/: sp_n_bn.py
src/mktanalyst/tb_parser/: st_tb.py  zerodha.py
tests/data/: tb_zerodha.csv
