[project]
name = "mktanalyst"
version = "0.1.0"
description = ""
authors = [
    {name = "Pankaj Ratan Lal",email = "pankaj.r.lal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "mktanalyst", from = "src"}]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.7"
ipykernel = "^6.30.1"
sqlmesh = "0.217.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
